Fix setup jsonschema version and docs import

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,4 +4,6 @@ ADD . /bdc-core
 
 WORKDIR /bdc-core
 
-RUN pip3 install -r requirements.txt
+RUN pip3 install pip --upgrade && \
+    pip install wheel && \
+    pip install -e .[tests,docs]
