--- a/pytest.ini
+++ b/pytest.ini
@@ -6,8 +6,6 @@
 # under the terms of the MIT License; see LICENSE file for more details.
 #
 
-"""Python BDC Core."""
-
-from .version import __version__
-
-__all__ = ('__version__',)
+[pytest]
+addopts = --color=auto --cov=bdc_core --cov-report=term-missing
+testpaths = tests
