--- a/setup.cfg
+++ b/setup.cfg
@@ -6,8 +6,8 @@
 # under the terms of the MIT License; see LICENSE file for more details.
 #
 
-"""Python BDC Core."""
+[aliases]
+test = pytest
 
-from .version import __version__
-
-__all__ = ('__version__',)
+[pydocstyle]
+add_ignore = D401
