--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ Sphinx==2.1.2
 git+https://github.com/brazil-data-cube/bdc-readthedocs-theme@master
 Flask-JWT>=0.3.2
 pytest==5.0.0
-Werkzeug>=0.14.1
+Werkzeug==0.16.1
 secure-smtplib==0.1.1
 Mako==1.1.1
