--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,6 +7,7 @@
 #
 
 exclude docs/sphinx/_build
+exclude docs/build
 exclude .dockerignore
 exclude docker
 exclude docker/Dockerfile
@@ -21,6 +22,7 @@ include LICENSE
 include pytest.ini
 recursive-include bdc_core *.txt
 recursive-exclude docs/sphinx/_build *
+recursive-exclude docs/build *
 recursive-include docs *.bat
 recursive-include docs *.css
 recursive-include docs *.py
