--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,8 +6,8 @@
 # under the terms of the MIT License; see LICENSE file for more details.
 #
 
-exclude docs/sphinx/_build
-exclude docs/build
+exclude doc/sphinx/_build
+exclude doc/build
 exclude .dockerignore
 exclude docker
 exclude docker/Dockerfile
@@ -21,12 +21,12 @@ include *.yml
 include LICENSE
 include pytest.ini
 recursive-include bdc_core *.txt
-recursive-exclude docs/sphinx/_build *
-recursive-exclude docs/build *
-recursive-include docs *.bat
-recursive-include docs *.css
-recursive-include docs *.py
-recursive-include docs *.rst
-recursive-include docs Makefile
+recursive-exclude doc/sphinx/_build *
+recursive-exclude doc/build *
+recursive-include doc *.bat
+recursive-include doc *.css
+recursive-include doc *.py
+recursive-include doc *.rst
+recursive-include doc Makefile
 recursive-include examples *.py
 recursive-include tests *.py
